hphp/hack/test/typecheck/readonly/params.php.exp
File "params.php", line 12, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
File "params.php", line 19, characters 5-16:
This expression is readonly, its members cannot be modified (Parsing[1002])
